@@ -316,15 +316,15 @@ class DebuggingMutableIntSet implements MutableIntSet {
     primaryImpl.foreach(new IntSetAction() {
       @Override
       public void act(int x) {
-        assert !bits.contains(new Integer(x));
-        bits.add(new Integer(x));
+        assert !bits.contains(Integer.valueOf(x));
+        bits.add(Integer.valueOf(x));
       }
     });
     secondaryImpl.foreach(new IntSetAction() {
       @Override
       public void act(int x) {
-        assert bits.contains(new Integer(x));
-        bits.remove(new Integer(x));
+        assert bits.contains(Integer.valueOf(x));
+        bits.remove(Integer.valueOf(x));
       }
     });
     assert bits.isEmpty();
@@ -341,15 +341,15 @@ class DebuggingMutableIntSet implements MutableIntSet {
     primaryImpl.foreachExcluding(X, new IntSetAction() {
       @Override
       public void act(int x) {
-        assert !bits.contains(new Integer(x));
-        bits.add(new Integer(x));
+        assert !bits.contains(Integer.valueOf(x));
+        bits.add(Integer.valueOf(x));
       }
     });
     secondaryImpl.foreachExcluding(X, new IntSetAction() {
       @Override
       public void act(int x) {
-        assert bits.contains(new Integer(x));
-        bits.remove(new Integer(x));
+        assert bits.contains(Integer.valueOf(x));
+        bits.remove(Integer.valueOf(x));
       }
     });
     assert bits.isEmpty();
